@@ -34,6 +34,7 @@ Verilator 4.202 2021-04-24
 * Add VerilatedCovContext::forcePerInstance (#2793). [Kevin Laeufer]
 * Add FST SystemC tracing (#2806). [Alex Torregrosa]
 * Add PINNOTFOUND warning in place of error (#2868). [Udi Finkelstein]
+* Add --reloop-limit argument (#2943). [Geza Lore]
 * Support overlaps in priority case statements (#2864). [Rupert Swarbrick]
 * Support for null ports (#2875). [Udi Finkelstein]
 * Optimize large lookup tables to static data (#2925). [Geza Lore]
